Pythonのコード修正

--- a/code/python/python-binder.ipynb
+++ b/code/python/python-binder.ipynb
@@ -2229,7 +2229,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "n = 15; p0 = 4 / 10; binom_test(2, 15, 4 / 10)"
+        "n = 15; p0 = 4 / 10; binom_test(2, n, p0)"
       ]
     },
     {
