--- a/code/mathematica/wolfram.ipynb
+++ b/code/mathematica/wolfram.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": "[矢吹太朗『コンピュータでとく数学』（オーム社, 2024）](https://github.com/taroyabuki/comath)\n\n\n",
+      "source": "-e\n\n[矢吹太朗『コンピュータでとく数学』（オーム社, 2024）](https://github.com/taroyabuki/comath)\n\n\n",
       "metadata": {}
     },
     {
@@ -3095,13 +3095,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "{Mean[eh] == 0,                            (* 特徴1 *)\n",
-        " Mean[yh] == Mean[y],                      (* 特徴2 *)\n",
-        " g . g == fh . fh + eh . eh,               (* 特徴3 *)\n",
-        " R2 == fh . fh/g . g,                      (* 特徴4 *)\n",
-        " R2 == Correlation[y, yh]^2,               (* 特徴5 *)\n",
-        " 0 <= R2 <= 1,                             (* 特徴6 *)\n",
-        " Correlation[y, yh] == Correlation[y, x1]} (* 特徴7 *)"
+        "{Mean[eh] == 0,                                (* 特徴1 *)\n",
+        " Mean[yh] == Mean[y],                          (* 特徴2 *)\n",
+        " g . g == fh . fh + eh . eh,                   (* 特徴3 *)\n",
+        " R2 == fh . fh/g . g,                          (* 特徴4 *)\n",
+        " R2 == Correlation[y, yh]^2,                   (* 特徴5 *)\n",
+        " 0 <= R2 <= 1,                                 (* 特徴6 *)\n",
+        " Correlation[y, yh]^2 == Correlation[y, x1]^2} (* 特徴7 *)"
       ]
     },
     {
