--- a/code/python/python-binder.ipynb
+++ b/code/python/python-binder.ipynb
@@ -2470,7 +2470,7 @@
         " np.allclose(R2, np.dot(fh, fh) / np.dot(g, g)),             # 特徴4\n",
         " np.allclose(R2, np.corrcoef(y, yh)[0, 1]**2),               # 特徴5\n",
         " 0 <= R2 <= 1,                                               # 特徴6\n",
-        " np.allclose(np.corrcoef(y, yh), np.corrcoef(y, x1)))        # 特徴7"
+        " np.allclose(np.corrcoef(y, yh)**2, np.corrcoef(y, x1)**2))  # 特徴7"
       ]
     },
     {
