--- a/code/r/r-binder.ipynb
+++ b/code/r/r-binder.ipynb
@@ -1473,7 +1473,7 @@
         "  all.equal(R2, sum(fh * fh) / sum(g * g)),           # 特徴4\n",
         "  all.equal(R2, cor(y, yh[, 1])^2),                   # 特徴5\n",
         "  0 <= R2 & R2 <= 1,                                  # 特徴6\n",
-        "  all.equal(cor(y, yh[, 1]), cor(y, data$x1)))        # 特徴7"
+        "  all.equal(cor(y, yh[, 1])^2, cor(y, data$x1)^2))    # 特徴7"
       ]
     },
     {
