--- a/code/python/python-binder.ipynb
+++ b/code/python/python-binder.ipynb
@@ -1155,7 +1155,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "var('a b'); L = sum((y - (a * x + b))**2); L"
+        "var('a b'); L = sum((y - (x * a + b))**2); L"
       ]
     },
     {
