--- a/code/python/python.ipynb
+++ b/code/python/python.ipynb
@@ -3935,7 +3935,7 @@
         "P = pca2.fit_transform(X); print(P) # 主成分スコア\n",
         "tV = pca2.components_; print(tV.T)  # 主成分\n",
         "print(tV[0])                        # 第1主成分（求めるもの）\n",
-        "s2 = pca2.explained_variance_ratio_ # 特異値の2乗\n",
+        "s2 = pca2.singular_values_**2       # 特異値の2乗\n",
         "print(np.cumsum(s2) / sum(s2))      # 累積寄与率（後述）"
       ]
     },
