固有値が0以下になる対称行列への対応

--- a/code/mathematica/wolfram.ipynb
+++ b/code/mathematica/wolfram.ipynb
@@ -4873,7 +4873,7 @@
       "outputs": [],
       "source": [
         "S = {{2, 2, -2}, {2, 5, -4}, {-2, -4, 5}};\n",
-        "{Q, L, V} = SingularValueDecomposition[S];\n",
+        "{Q, L, V} = SingularValueDecomposition[S]; L = Simplify[Transpose[Q] . S . Q]; (*L = Simplify[Transpose[V] . S . V];*)\n",
         "{MatrixForm[Q], MatrixForm[L],\n",
         " S == Q . L . Transpose[Q] == V . L . Transpose[V]}"
       ]
