--- a/code/r/r-binder.ipynb
+++ b/code/r/r-binder.ipynb
@@ -1944,7 +1944,7 @@
       "outputs": [],
       "source": [
         "S <- rbind(c(2, 2, -2), c(2, 5, -4), c(-2, -4, 5))\n",
-        "tmp <- svd(S); Q <- tmp$u; d <- tmp$d; L <- diag(d, length(d)); V <- tmp$v\n",
+        "tmp <- svd(S); Q <- tmp$u; V <- tmp$v; L <- t(Q) %*% S %*% Q; #L <- t(V) %*% S %*% V\n",
         "print(Q); print(L);\n",
         "c(all.equal(S, Q %*% L %*% t(Q)), all.equal(S, V %*% L %*% t(V)))"
       ]
