--- a/code/python/python.Rmd
+++ b/code/python/python.Rmd
@@ -1982,13 +1982,13 @@ var('x'); solve((x * eye(n) - A).det(), x)
 
 ```{python}
 S = Matrix([[2, 2, -2], [2, 5, -4], [-2, -4, 5]])
-Q, L, V = S.singular_value_decomposition()
+Q, L, V = S.singular_value_decomposition(); L = Q.T @ S @ Q; #L = V.T @ S @ V
 Q, L, S == Q @ L @ Q.T == V @ L @ V.T
 ```
 
 ```{python}
 Sn = np.array([[2, 2, -2], [2, 5, -4], [-2, -4, 5]])
-Q, lambdas, tV = linalg.svd(Sn); L = np.diag(lambdas)
+Q, lambdas, tV = linalg.svd(Sn); L = Q.T @ Sn @ Q; #L = tV @ Sn @ tV.T
 Q, L, np.allclose(Sn, Q @ L @ Q.T), np.allclose(Sn, tV.T @ L @ tV)
 ```
 
@@ -2005,9 +2005,8 @@ Q, L, np.allclose(np.double(S), np.double(Q @ L @ Q.T)) # 近似的な比較
 
 ```{python}
 Sn = np.array([[2, 2, -2], [2, 5, -4], [-2, -4, 5]])
-tmp = linalg.eig(Sn); vals = tmp[0]; vecs = tmp[1] # ①
-Q = linalg.qr(vecs)[0]                             # ②, ③
-L = np.diag(vals)                                  # ④
+vals, Q = linalg.eigh(Sn) # ①, ②, ③
+L = np.diag(vals)         # ④
 Q, L, np.allclose(Sn, Q @ L @ Q.T)
 ```
 
