--- a/code/python/python.ipynb
+++ b/code/python/python.ipynb
@@ -3783,7 +3783,7 @@
       "outputs": [],
       "source": [
         "S = Matrix([[2, 2, -2], [2, 5, -4], [-2, -4, 5]])\n",
-        "Q, L, V = S.singular_value_decomposition()\n",
+        "Q, L, V = S.singular_value_decomposition(); L = Q.T @ S @ Q; #L = V.T @ S @ V\n",
         "Q, L, S == Q @ L @ Q.T == V @ L @ V.T"
       ]
     },
@@ -3794,7 +3794,7 @@
       "outputs": [],
       "source": [
         "Sn = np.array([[2, 2, -2], [2, 5, -4], [-2, -4, 5]])\n",
-        "Q, lambdas, tV = linalg.svd(Sn); L = np.diag(lambdas)\n",
+        "Q, lambdas, tV = linalg.svd(Sn); L = Q.T @ Sn @ Q; #L = tV @ Sn @ tV.T\n",
         "Q, L, np.allclose(Sn, Q @ L @ Q.T), np.allclose(Sn, tV.T @ L @ tV)"
       ]
     },
@@ -3821,9 +3821,8 @@
       "outputs": [],
       "source": [
         "Sn = np.array([[2, 2, -2], [2, 5, -4], [-2, -4, 5]])\n",
-        "tmp = linalg.eig(Sn); vals = tmp[0]; vecs = tmp[1] # ①\n",
-        "Q = linalg.qr(vecs)[0]                             # ②, ③\n",
-        "L = np.diag(vals)                                  # ④\n",
+        "vals, Q = linalg.eigh(Sn) # ①, ②, ③\n",
+        "L = np.diag(vals)         # ④\n",
         "Q, L, np.allclose(Sn, Q @ L @ Q.T)"
       ]
     },
